--- a/angular/src/app/admin/tenants/create-tenant-modal.component.html
+++ b/angular/src/app/admin/tenants/create-tenant-modal.component.html
@@ -89,7 +89,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group" *ngIf="!setRandomPassword">
-                                <label for="AdminPassword">{{"AdminPassword" | localize}}</label>
+                                <label for="AdminPassword">{{"AdminPassword" | localize}} *</label>
                                 <input id="AdminPassword" type="password"autocomplete="off" name="adminPassword" class="form-control"
                                     id="adminPassword" [(ngModel)]="tenant.adminPassword"
                                     [ngClass]="{'edited':tenant.adminPassword}" [required]="!setRandomPassword"
@@ -120,7 +120,7 @@
                         
                         <div class="col-md-6">
                             <div class="form-group" *ngIf="!setRandomPassword">
-                                <label for="AdminPasswordRepeat">{{"AdminPasswordRepeat" | localize}}</label>
+                                <label for="AdminPasswordRepeat">{{"AdminPasswordRepeat" | localize}} *</label>
                                 <input id="AdminPasswordRepeat" type="password" autocomplete="off" name="adminPasswordRepeat" class="form-control"
                                     [(ngModel)]="tenantAdminPasswordRepeat" [ngClass]="{'edited':adminPasswordRepeat}"
                                     [required]="!setRandomPassword" #adminPasswordRepeat="ngModel"
