--- a/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
+++ b/angular/src/app/main/reconcilliation/amortized/create-edit-amortized/create-edit-amortized.component.html
@@ -41,14 +41,14 @@
                                                     <div class="row">
                                                         <div [ngClass]="{'disabled':!updateLock}" class="col-md-6">
                                                             <div class="form-group">
-                                                                <label for="InvoiceNo">{{"Invoice No" | localize}}.</label>
+                                                                <label for="InvoiceNo">{{"Invoice No" | localize}}. *</label>
                                                                 <input type="text" name="inoviceNo" class="form-control"
                                                                     [(ngModel)]="amortizationDto.inoviceNo" autocomplete="off">
                                                             </div>
                                                         </div>
                                                         <div [ngClass]="{'disabled':!updateLock}"class="col-md-6">
                                                             <div class="form-group">
-                                                                <label for="TaskName">{{"Journal Entry No" | localize}}.</label>
+                                                                <label for="TaskName">{{"Journal Entry No" | localize}}. *</label>
                                                                 <input type="text" name="accountNumber" class="form-control"
                                                                     [(ngModel)]="amortizationDto.journalEntryNo" autocomplete="off" >
                                                             </div>
@@ -57,7 +57,7 @@
                                                     <div class="row">
                                                         <div [ngClass]="{'disabled':!updateLock}" class="col-md-6">
                                                             <div class="form-group category-selector">
-                                                                <label for="Date">{{"Start Date" | localize}}</label>
+                                                                <label for="Date">{{"Start Date" | localize}} *</label>
                                                                 <input [(ngModel)]="amortizationDto.startDate" required="required"
                                                                 class="form-control " name="startDate" bsDatepicker
                                                                 placeholder="Select Date" class="form-control" autocomplete="off" name="date"
@@ -70,7 +70,7 @@
                                                            
 
                                                             <div [ngClass]="{'disabled':!updateLock}" class="form-group category-selector">
-                                                                <label for="Date">{{"End Date" | localize}}</label>
+                                                                <label for="Date">{{"End Date" | localize}} *</label>
                                                                 <input [(ngModel)]="amortizationDto.endDate"  required="required"
                                                                 class="form-control" name="endDate" bsDatepicker
                                                                 placeholder="Select Date" class="form-control" autocomplete="off" name="date"
@@ -81,12 +81,12 @@
                                                     </div>
                                                     <div class="row form-group">
                                                         <div [ngClass]="{'disabled':!updateLock}" class="col-md-6">
-                                                            <label for="TaskName">{{"Amount" | localize}}</label>
+                                                            <label for="TaskName">{{"Amount" | localize}} *</label>
                                                             <input type="text" name="amount" class="form-control"
                                                             [(ngModel)]="amortizationDto.amount" autocomplete="off">
                                                         </div>
                                                         <div *ngIf="accumulateAmount" class="col-md-6">
-                                                            <label for="TaskName">{{"Accumulate Amount" | localize}}</label>
+                                                            <label for="TaskName">{{"Accumulate Amount" | localize}} *</label>
                                                             <input type="text" name="accomulateAmount" class="form-control"
                                                             [(ngModel)]="amortizationDto.accomulateAmount" autocomplete="off">
                                                         </div>
@@ -96,7 +96,7 @@
                                                     <div class="row">
                                                         <div [ngClass]="{'disabled':!updateLock}" class="col-md-12">
                                                             <div class="form-group">
-                                                                <label for="description">{{"Description" | localize}}</label>
+                                                                <label for="description">{{"Description" | localize}} </label>
                                                                 <textarea class="form-control" required style="height: 220px;" [(ngModel)]="amortizationDto.description"
                                                                     id="description" name="description" 
                                                                     autocomplete="off" ></textarea>
